package com.urise.webapp.model;

import java.util.ArrayList;
import java.util.List;

public class JobEducationSection extends AbstractSection {
    private final List<Experience> JobEducationSection = new ArrayList<>();

    public List<Experience> getJobEducationSection() {
        return JobEducationSection;
    }
}
