package com.urise.webapp.model;

import java.util.ArrayList;
import java.util.List;

public class TextListSection extends AbstractSection {
    private final List<String> textListSection = new ArrayList<>();

    public List<String> getTextListSection() {
        return textListSection;
    }
}