@startuml
'https://plantuml.com/class-diagram

 class Resume {
    private final String uuid;
    private final String fullName;
    private final EnumMap<ContactType, String> contacts
    private final EnumMap<SectionType, AbstractSection> sections
     getUuid()
     getFullName()
     equals(Object o)
     hashCode()
     toString()
}

 Resume  *-- ContactType : композиция
 enum ContactType{
     TEL
     SKYPE
     MAIL
     LINKEDLN
     GITHUB
     STACKOVERFLOW
     private String title
      ContactType(String title)
      getTitle()
 }

Resume  *-- SectionType : композиция
 enum SectionType{
      PERSONAL
      OBJECTIVE
      ACHIEVEMENT
      QUALIFICATIONS
      EXPERIENCE
      EDUCATION
      private String title
       ContactType(String title)
       getTitle()
 }

Resume  *--  AbstractSection : композиция
     abstract class AbstractSection {
    }

AbstractSection <|-- TextSection : extends
class TextSection {
      private String textSection
}

AbstractSection <|-- TextListSection : extends
class TextListSection {
    private final List<String> textListSection
}

JobEducationSection  *--  JobEducationTextSection : композиция
class JobEducationTextSection {
      private String JobEducationName;
      private String JobEducationDate;
      private String JobEducationText;
 }

AbstractSection  <|--  JobEducationSection : extends
class JobEducationSection {
    private final List<JobEducationTextSection> JobEducationSection
}

@enduml